Ajout images noun

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Suivez-moi ! <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
               <li><a href="https://fr.linkedin.com/pub/jean-luc-rio/99/a04/18" title="Linkedin" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i> Linkedin</a></li>
-              <li><a href="http://www.viadeo.com/fr/profile/jean-luc.rio" title="Viadeo" target="_blank"><img src="../images/viadeo.jpg" height="15px"> Viadeo</i></a>
+              <li><a href="http://www.viadeo.com/fr/profile/jean-luc.rio" title="Viadeo" target="_blank"><img src="images/viadeo.jpg" height="15px"> Viadeo</i></a>
             </li> 
                 <li><a href="https://twitter.com/riojeanluc1962" target="blank"> <i class="fa fa-twitter-square"></i> Twitter</a></li>
                 <li><a href="https://www.facebook.com/jeanlucrioblog" target="blank"> <i class="fa fa-facebook-square"></i> Facebook</a></li>
@@ -111,28 +111,28 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-sm-6 col-md-3 feature">
-          <a href="page_2.html" title="RH" target="_blank"><img src="../images/noun_305966_cc.png" width="48"></a>
+          <a href="page_2.html" title="RH" target="_blank"><img src="images/noun_305966_cc.png" width="48"></a>
           <p>
             Découvrez les pratiques <strong> RH </strong>
             et les applications professionnelles dans le secteur du Tourisme.
           </p>
         </div>
         <div class="col-sm-6 col-md-3 feature">
-          <a href="https://riojeanluc.com" title="blog" target="blank"><img src="../images/noun_434749_cc.png" width="48"></a>
+          <a href="https://riojeanluc.com" title="blog" target="blank"><img src="images/noun_434749_cc.png" width="48"></a>
           <p>
             Découvrez l'actualité du <strong>Digital et de la Gestion de Projet </strong>
            ainsi que des sujets de société (psychologie, sociologie,...)
           </p>
         </div>
         <div class="col-sm-6 col-md-3 feature">
-          <a href="https://www.facebook.com/lesOutilsGdP/" title="Gestion de projet" target="_blank"><img src="../images/noun_501983_cc.png" width="48"></a>
+          <a href="https://www.facebook.com/lesOutilsGdP/" title="Gestion de projet" target="_blank"><img src="images/noun_501983_cc.png" width="48"></a>
           <p>
             Découvrez les outils de la <strong>gestion de projet </strong>
             et les sujets périphériques.
           </p>
         </div>
         <div class="col-sm-6 col-md-3 feature">
-          <a href="file:///C:/Users/RIO/Desktop/Mon_Site/htdocs/page_1.html" title="Parcours" target="_blank"><img src="../images/noun_281432_cc.png" width="48"></a>
+          <a href="file:///C:/Users/RIO/Desktop/Mon_Site/htdocs/page_1.html" title="Parcours" target="_blank"><img src="images/noun_281432_cc.png" width="48"></a>
           <p>
             Découvrez <strong>mon parcours</strong>
             et mes formations.
